--- a/TODO
+++ b/TODO
@@ -1,3 +1,6 @@
+ - Entities
+   - Item Entities
+   - Other Entities? (eventually, TM)
  - Organization
    - Probably only want one level of subdirectory in `src`
  - Shader Abstraction
@@ -22,3 +25,8 @@
          - Lighting
          - OpenGL in ImGui
    - So, yeah uhm, maybe don't combine them? I don't even know.
+ - Main Menu
+   - Ability to create new worlds, load saved worlds, edit settings, and quit
+ - Save Games
+ - Audio
+ - Particle Systems
