About to start doing collisions

--- a/TODO
+++ b/TODO
@@ -92,6 +92,9 @@ Quality:
      then the shaders become equivalent, so, yes.
 
 Random:
+ - imconfig.h
+   - ImTextureID
+   - ImVec2
  - Investigate whether you can use a templated function without template parameters
    - In this case, in order to create a _different_ static variable for every callsite
      - To allow us to create a `debounce` function which is just the standard hacky
