yo dawg i herd you like stuff so i put more stuff in your stuff so you can stuff it while you puff it

--- a/TODO
+++ b/TODO
@@ -17,7 +17,8 @@ Features:
      - Ability to play short sound effects
  - Particle Systems
 
-Code/Dev Features:
+Code/Dev Features/Quality:
+ - Rename Tile to Tile_Entity
  - Consider switching away from stb_ds.h
    - It's a great library! But .. eh.
      - Fewer Libraries = Better
