Rewrite the crafting system a bit... not fully-tested yet

--- a/TODO
+++ b/TODO
@@ -1,4 +1,6 @@
 Features:
+ - Linux Build!!!!!
+   - Also, we're not doing OSX. Fuck Apple. #FuckApple2k20
  - Entities
    - Item Entities
    - Other Entities? (eventually, TM)
