--- a/TODO
+++ b/TODO
@@ -33,6 +33,9 @@ Features:
      - Inventory, Chest, Furnace, etc.?
 
 Code/Dev Features/Quality:
+ - Ctrl+C takes a LONG time to close the program
+   - Is this just because we don't explicitly handle
+     the signal? errrr..... yeeeeaaaahhhhhhh...
  - Asset files
    - _Eventually_ (TM), we'll want to have a custom asset file
      format instead of just loading PNGs from disk, for example.
